# HR-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  main.py  utils.py
app/agent/: output_parser.py  tools.py
app/integrations/: faiss.py  gcal.py  gmail.py  google_auth.py
app/integrations/bamboo/: employees.py  time_off.py  utils.py
app/prompts/: master.yaml
assets/: HR_policies.pickle
